--- a/web/scenarioRecord/Edit.xhtml
+++ b/web/scenarioRecord/Edit.xhtml
@@ -40,37 +40,39 @@
                     <h:outputText value="#{encounterRecordController.pagination.pageFirstItem + 1}..#{encounterRecordController.pagination.pageLastItem + 1}/#{encounterRecordController.pagination.itemsCount}"/>&nbsp;
                     <h:commandLink action="#{encounterRecordController.previous}" value="#{bundle.Previous} #{encounterRecordController.pagination.pageSize}" rendered="#{encounterRecordController.pagination.hasPreviousPage}"/>&nbsp;
                     <h:commandLink action="#{encounterRecordController.next}" value="#{bundle.Next} #{encounterRecordController.pagination.pageSize}" rendered="#{encounterRecordController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{encounterRecordController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                    <h:panelGrid styleClass="tableGrid">
+                        <h:dataTable value="#{encounterRecordController.items}" var="item" rules="all" styleClass="w">
 
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="エンカウンター名"/>
-                            </f:facet>
-                            <h:outputText value="#{item.name}"/>
-                        </h:column>                               
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="ラウンド"/>
-                            </f:facet>
-                            <h:outputText value="#{item.round}"/>
-                        </h:column>                 
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="備考"/>
-                            </f:facet>
-                            <h:outputText value="#{item.comments}"/>
-                        </h:column>                    
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="&nbsp;"/>
-                            </f:facet>
-                            <h:commandLink action="#{encounterRecordController.prepareView}" value="戦闘"/>
-                            <h:outputText value="  "/>
-                            <h:commandLink action="#{encounterRecordController.prepareEdit}" value="編集"/> 
-                            <h:outputText value="  "/>
-                            <h:commandLink action="#{encounterRecordController.destroy}" value="削除"/>
-                        </h:column>
-                    </h:dataTable>
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="エンカウンター名"/>
+                                </f:facet>
+                                <h:outputText value="#{item.name}"/>
+                            </h:column>                               
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="ラウンド"/>
+                                </f:facet>
+                                <h:outputText value="#{item.round}"/>
+                            </h:column>                 
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="備考"/>
+                                </f:facet>
+                                <h:outputText value="#{item.comments}"/>
+                            </h:column>                    
+                            <h:column>
+                                <f:facet name="header">
+                                    <h:outputText value="&nbsp;"/>
+                                </f:facet>
+                                <h:commandLink action="#{encounterRecordController.prepareView}" value="戦闘"/>
+                                <h:outputText value="  "/>
+                                <h:commandLink action="#{encounterRecordController.prepareEdit}" value="編集"/> 
+                                <h:outputText value="  "/>
+                                <h:commandLink action="#{encounterRecordController.destroy}" value="削除"/>
+                            </h:column>
+                        </h:dataTable>
+                    </h:panelGrid>                        
                 </h:panelGroup>
             </h:form>
             <br/>
@@ -83,7 +85,7 @@
                     <h:commandButton action="#{encounterRecordController.create}" value="作成" />                    
                 </h:panelGrid>
             </h:form>
-            
+
         </ui:define>
     </ui:composition>
 
