--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -52,25 +52,25 @@
                             <h:commandLink action="/characterSheet/CharacterListPage" id="charaListLink" styleClass="leftpanetext" value="キャラクター一覧"/>                        
                         </h:panelGrid>                     
                         <h:panelGrid id="adminCell" style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="#{pageHeader.adminLink_action}" id="adminLink" styleClass="leftpanetext" value="管理画面"/>
+                            <h:outputLabel styleClass="leftpanetext" value="管理画面"/>
                         </h:panelGrid> 
                         <h:panelGrid id="newClassCell" rendered="true" style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="#{pageHeader.newClassLink_action}" id="newClassLink" styleClass="leftpanetext" value="新規クラス作成"/>
+                            <h:commandLink action="#{pageHeader.newClassLink_action}" id="newClassLink" styleClass="leftpanetextAdmin" value="新規クラス作成"/>
                         </h:panelGrid>
                         <h:panelGrid id="classListCell2" style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="#{pageHeader.classListLink_action}" id="classListLink" styleClass="leftpanetext" value="クラス一覧"/>
+                            <h:commandLink action="#{pageHeader.classListLink_action}" id="classListLink" styleClass="leftpanetextAdmin" value="クラス一覧"/>
                         </h:panelGrid>
                         <h:panelGrid id="newRaceCell2" rendered="true" style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="#{pageHeader.newRaceLink_action}" id="newRaceLink" styleClass="leftpanetext" value="新規種族作成"/>
+                            <h:commandLink action="#{pageHeader.newRaceLink_action}" id="newRaceLink" styleClass="leftpanetextAdmin" value="新規種族作成"/>
                         </h:panelGrid>
                         <h:panelGrid id="raceListCell2" style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="#{pageHeader.raceListLink_action}" id="raceListLink" styleClass="leftpanetext" value="種族一覧"/>
+                            <h:commandLink action="#{pageHeader.raceListLink_action}" id="raceListLink" styleClass="leftpanetextAdmin" value="種族一覧"/>
                         </h:panelGrid>       
                         <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="/scenarioRecord/List" styleClass="leftpanetext" value="シナリオ一覧"/>
+                            <h:commandLink action="/scenarioRecord/List" styleClass="leftpanetextAdmin" value="シナリオ一覧"/>
                         </h:panelGrid>   
                         <h:panelGrid  style="width: 100%; height: 100%;" styleClass="leftpanelink">
-                            <h:commandLink action="/monsterMaster/List" styleClass="leftpanetext" value="モンスター一覧"/>
+                            <h:commandLink action="/monsterMaster/List" styleClass="leftpanetextAdmin" value="モンスター一覧"/>
                         </h:panelGrid>  
                     </h:panelGrid>                
                 </h:form>                    
